# layer-cake-learning

./: .gitignore  CHANGELOG.md  README.md  input.json  layer-cake.cabal
app/: Main.hs
app/layer1/: AppEnv.hs  AppM.hs
app/layer2/: Capabilities.hs  Effects.hs
app/layer3/: AppLogic.hs  BusinessLogic.hs  Types.hs
tests/layer-3/: TestBusinessLogic.hs
