cabal-version:        3.0
name:                 layer-cake
version:              0.1.0.0
license:              MIT
license-file:         LICENSE
author:               Ethan Kent
maintainer:           ekent@jd11.law.harvard.edu
build-type:           Simple
extra-doc-files:      CHANGELOG.md

executable layer-cake
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:      base, aeson, mtl, bytestring
  hs-source-dirs:     app, app/layer1, app/layer2, app/layer3
  other-modules:      AppEnv
                      , AppLogic
                      , AppM
                      , BusinessLogic
                      , Capabilities
                      , Effects
                      , Types
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite layer-cake-tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     app, tests
  main-is:            Spec.hs
  build-depends:      base, hspec, aeson, mtl, bytestring
  other-modules:      AppEnv
                      , AppLogic
                      , AppM
                      , BusinessLogic
                      , Capabilities
                      , Effects
                      , Types
  build-tool-depends: hspec-discover:hspec-discover
  default-language:   Haskell2010
  ghc-options:        -Wall
